# VerifiableIntentDemo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  deploy-hf.ps1
backend/: pyproject.toml
backend/app/: catalog.py  events.py  keys.py  llm.py  main.py  orchestrator.py  sd_jwt_view.py
backend/app/roles/: agent.py  issuer.py  merchant.py  network.py  wallet.py
backend/tests/: test_full_flow.py
docs/: architecture.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  fieldDocs.ts  glossary.ts  index.css  narratives.ts  roleTheme.ts  specRefs.ts  store.ts  types.ts
frontend/src/components/: BindingMath.tsx  CatalogModal.tsx  ConceptStage.tsx  ConstraintChecks.tsx  CredentialStack.tsx  DetailPanel.tsx  DisclosureMatrix.tsx  DocumentedJsonView.tsx  FailureCompareCard.tsx  FailureInjector.tsx  RoleHistoryStrip.tsx  RolePanel.tsx  SdJwtXRay.tsx  SpecDrawer.tsx  SplitL2Comparison.tsx  StakeholderGraph.tsx  Timeline.tsx
