[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vi-demo-backend"
version = "0.1.0"
description = "Backend services for the Verifiable Intent end-to-end demo"
requires-python = ">=3.11"
dependencies = [
    "verifiable-intent @ git+https://github.com/agent-intent/verifiable-intent.git@main",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
